practice/Observability Stack/Observability Node App/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: monitoring
  labels:
    name: monitoring
