practice/Observability Stack/Observability Node App/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: observability-node-app
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: monitoring
spec:
  selector:
    app: node-app
  ports:
    - name: http
      port: 3000
      targetPort: 3000
